# uv_package_demo

./: .gitignore  README.md  data_generator.py  data_storage.py  main.py  pyproject.toml  visualizer.py
Data/: customer_data.json  sales_data.csv  stock_data.csv  weather_data.json
